refactors for configurable UI

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -1,3 +1,5 @@
+#App
+appName=can4eve
 #Parts
 Menu=Menü
 #Main Menu
@@ -5,4 +7,5 @@ fileMenu = Datei
 quitMenuItem = Beenden
 helpMenu = Hilfe
 aboutMenuItem = Über
+feedbackMenuItem = Feedback senden ...
 
