--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -1,3 +1,5 @@
+#App
+appName=can4eve
 #Parts
 Menu=Menu
 #Main Menu
@@ -5,3 +7,4 @@ fileMenu = File
 helpMenu = Help 
 quitMenuItem = Quit
 aboutMenuItem = About
+feedbackMenuItem = send Feedback ...
