refactors to start with generic JavaFx dialogs

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -8,4 +8,5 @@ quitMenuItem = Beenden
 helpMenu = Hilfe
 aboutMenuItem = Über
 feedbackMenuItem = Feedback senden ...
+preferencesMenuItem = Einstellungen
 
