adds Vehicle menu

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -5,6 +5,8 @@ Menu=Menü
 #Main Menu
 fileMenu = Datei
 quitMenuItem = Beenden
+vehicleMenu = Fahrzeug
+vehicleMenuItem = Details
 helpMenu = Hilfe
 aboutMenuItem = Über
 feedbackMenuItem = Feedback senden ...
