--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -3,9 +3,11 @@ appName=can4eve
 #Parts
 Menu=Menu
 #Main Menu
-fileMenu = File 
-helpMenu = Help 
+fileMenu = File
 quitMenuItem = Quit
+vehicleMenu = Vehicle
+vehicleMenuItem = Details
+helpMenu = Help 
 aboutMenuItem = About
 feedbackMenuItem = send Feedback ...
 preferencesMenuItem = Preferences
