refactors to allow settings configuration

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -10,5 +10,5 @@ vehicleMenuItem = Details
 helpMenu = Hilfe
 aboutMenuItem = Über
 feedbackMenuItem = Feedback senden ...
-preferencesMenuItem = Einstellungen
+settingsMenuItem = Einstellungen
 
