--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -10,4 +10,4 @@ vehicleMenuItem = Details
 helpMenu = Help 
 aboutMenuItem = About
 feedbackMenuItem = send Feedback ...
-preferencesMenuItem = Preferences
+settingsMenuItem = Settings
