adds preferences handling

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -5,10 +5,14 @@ Menu=Menü
 #Main Menu
 fileMenu = Datei
 quitMenuItem = Beenden
+settingsMenu= Einstellungen
+settingsMenuItem = OBDII
+preferencesMenuItem = Vorgaben
 vehicleMenu = Fahrzeug
 vehicleMenuItem = Details
 helpMenu = Hilfe
 aboutMenuItem = Über
 feedbackMenuItem = Feedback senden ...
-settingsMenuItem = Einstellungen
-
+language_changed_title=Neue Sprache
+language_changed=Du hast Deutsch als Deine neue Sprache gewählt
+newlanguage_restart=Für den vollen Effekt des Wechsels ist ein Neustart der Anwendung erforderlich.
