--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -5,9 +5,16 @@ Menu=Menu
 #Main Menu
 fileMenu = File
 quitMenuItem = Quit
+settingsMenu = Settings
+settingsMenuItem = OBDII
+preferencesMenuItem = Preferences
 vehicleMenu = Vehicle
 vehicleMenuItem = Details
 helpMenu = Help 
 aboutMenuItem = About
 feedbackMenuItem = send Feedback ...
-settingsMenuItem = Settings
+# Language Change
+language_changed_title=New language
+language_changed=You have selected english as your new language
+newlanguage_restart=To get the full effect of the change a restart of the application is necessary!
+ 
