refactors to allow start

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -4,6 +4,9 @@ appName=can4eve
 Menu=Menü
 #Main Menu
 fileMenu = Datei
+startMenuItem=Start
+haltMenuItem=Halt
+testMenuItem=Test
 quitMenuItem = Beenden
 settingsMenu= Einstellungen
 settingsMenuItem = OBDII
