--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -4,6 +4,9 @@ appName=can4eve
 Menu=Menu
 #Main Menu
 fileMenu = File
+startMenuItem=Start
+haltMenuItem=Halt
+testMenuItem=Test
 quitMenuItem = Quit
 settingsMenu = Settings
 settingsMenuItem = OBDII
