refactors to simplify and check i18n

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -3,19 +3,26 @@ appName=can4eve
 #Parts
 Menu=Menü
 #Main Menu
-fileMenu = Datei
+fileMenu=Datei
 startMenuItem=Start
 haltMenuItem=Halt
 testMenuItem=Test
-quitMenuItem = Beenden
-settingsMenu= Einstellungen
-settingsMenuItem = OBDII
-preferencesMenuItem = Vorgaben
-vehicleMenu = Fahrzeug
-vehicleMenuItem = Details
-helpMenu = Hilfe
-aboutMenuItem = Über
-feedbackMenuItem = Feedback senden ...
+quitMenuItem=Beenden
+settingsMenu=Einstellungen
+settingsMenuItem=OBDII
+preferencesMenuItem=Vorgaben
+vehicleMenu=Fahrzeug
+vehicleMenuItem=Details
+helpMenu=Hilfe
+aboutMenuItem=Über
+feedbackMenuItem=Feedback senden ...
 language_changed_title=Neue Sprache
 language_changed=Du hast Deutsch als Deine neue Sprache gewählt
 newlanguage_restart=Für den vollen Effekt des Wechsels ist ein Neustart der Anwendung erforderlich.
+# Messages
+success=Erfolg
+error=Fehler
+invalid_configuration=ungültige oder unbekannte Verbindungseinstellung
+connection_ok=Verbindung OK\u2713
+connection_failed=Verbindung fehlgeschlagen
+problem_occured=Ein Problem is aufgetreten
