--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -3,21 +3,27 @@ appName=can4eve
 #Parts
 Menu=Menu
 #Main Menu
-fileMenu = File
+fileMenu=File
 startMenuItem=Start
 haltMenuItem=Halt
 testMenuItem=Test
-quitMenuItem = Quit
-settingsMenu = Settings
-settingsMenuItem = OBDII
-preferencesMenuItem = Preferences
-vehicleMenu = Vehicle
-vehicleMenuItem = Details
-helpMenu = Help 
-aboutMenuItem = About
-feedbackMenuItem = send Feedback ...
+quitMenuItem=Quit
+settingsMenu=Settings
+settingsMenuItem=OBDII
+preferencesMenuItem=Preferences
+vehicleMenu=Vehicle
+vehicleMenuItem=Details
+helpMenu=Help 
+aboutMenuItem=About
+feedbackMenuItem=send Feedback ...
 # Language Change
 language_changed_title=New language
 language_changed=You have selected english as your new language
 newlanguage_restart=To get the full effect of the change a restart of the application is necessary!
- 
+# Messages
+invalid_configuration=invalid or unknown connection configuration
+success=Success
+error=Error
+connection_ok=Connection OK\u2713
+connection_failed=Connection failed
+problem_occured=A problem occured
