refactors to improve error handling and allow running with simulator

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -16,6 +16,7 @@ vehicleMenuItem=Details
 helpMenu=Hilfe
 aboutMenuItem=Über
 feedbackMenuItem=Feedback senden ...
+bugReportMenuItem=Bug melden ...
 language_changed_title=Neue Sprache
 language_changed=Du hast Deutsch als Deine neue Sprache gewählt
 newlanguage_restart=Für den vollen Effekt des Wechsels ist ein Neustart der Anwendung erforderlich.
@@ -26,3 +27,4 @@ invalid_configuration=ungültige oder unbekannte Verbindungseinstellung
 connection_ok=Verbindung OK\u2713
 connection_failed=Verbindung fehlgeschlagen
 problem_occured=Ein Problem is aufgetreten
+support_email=support@bitplan.com
