--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -16,6 +16,7 @@ vehicleMenuItem=Details
 helpMenu=Help 
 aboutMenuItem=About
 feedbackMenuItem=send Feedback ...
+bugReportMenuItem=create Bugreport ...
 # Language Change
 language_changed_title=New language
 language_changed=You have selected english as your new language
@@ -27,3 +28,4 @@ error=Error
 connection_ok=Connection OK\u2713
 connection_failed=Connection failed
 problem_occured=A problem occured
+support_email=support@bitplan.com
