--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -28,3 +28,5 @@ connection_ok=Verbindung OK\u2713
 connection_failed=Verbindung fehlgeschlagen
 problem_occured=Ein Problem is aufgetreten
 support_email=support@bitplan.com
+monitoring=lese ...
+halted=halt
