--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -29,3 +29,5 @@ connection_ok=Connection OK\u2713
 connection_failed=Connection failed
 problem_occured=A problem occured
 support_email=support@bitplan.com
+monitoring=reading ...
+halted=stopped
