refactors for Task launch shortcut

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -4,10 +4,13 @@ appName=can4eve
 Menu=Menü
 #Main Menu
 fileMenu=Datei
+openMenuItem=Öffnen
+saveMenuItem=Speichern
+quitMenuItem=Beenden
+obdMenu=OBD
 startMenuItem=Start
 haltMenuItem=Halt
 testMenuItem=Test
-quitMenuItem=Beenden
 settingsMenu=Einstellungen
 settingsMenuItem=OBDII
 preferencesMenuItem=Vorgaben
