--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -4,10 +4,13 @@ appName=can4eve
 Menu=Menu
 #Main Menu
 fileMenu=File
+openMenuItem=Open
+saveMenuItem=Save
+quitMenuItem=Quit
+obdMenu=OBD
 startMenuItem=Start
 haltMenuItem=Halt
 testMenuItem=Test
-quitMenuItem=Quit
 settingsMenu=Settings
 settingsMenuItem=OBDII
 preferencesMenuItem=Preferences
