improves menu and showLink

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -18,6 +18,7 @@ vehicleMenu=Fahrzeug
 vehicleMenuItem=Details
 helpMenu=Hilfe
 aboutMenuItem=Über
+helpMenuItem=can4eve Hilfe
 feedbackMenuItem=Feedback senden ...
 bugReportMenuItem=Bug melden ...
 language_changed_title=Neue Sprache
