--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -18,6 +18,7 @@ vehicleMenu=Vehicle
 vehicleMenuItem=Details
 helpMenu=Help 
 aboutMenuItem=About
+helpMenuItem=can4eve Help
 feedbackMenuItem=send Feedback ...
 bugReportMenuItem=create Bugreport ...
 # Language Change
