adds View menu + not implemented messages

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -16,6 +16,10 @@ settingsMenuItem=OBDII
 preferencesMenuItem=Vorgaben
 vehicleMenu=Fahrzeug
 vehicleMenuItem=Details
+viewMenu=Ansicht
+historyViewMenuItem=Verlauf
+settingsViewMenuItem=Einstellungen
+monitorViewMenuItem=OBD
 helpMenu=Hilfe
 aboutMenuItem=Über
 helpMenuItem=can4eve Hilfe
@@ -34,3 +38,6 @@ problem_occured=Ein Problem is aufgetreten
 support_email=support@bitplan.com
 monitoring=lese ...
 halted=halt
+sorry=Entschuldigung
+weAreSorry=Es tut uns leid ...
+notImplementedYet= ist noch nicht realisiert
