--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -14,8 +14,12 @@ testMenuItem=Test
 settingsMenu=Settings
 settingsMenuItem=OBDII
 preferencesMenuItem=Preferences
-vehicleMenu=Vehicle
+vehicleMenu=Car
 vehicleMenuItem=Details
+viewMenu=View
+historyViewMenuItem=History
+settingsViewMenuItem=Settings
+monitorViewMenuItem=OBD
 helpMenu=Help 
 aboutMenuItem=About
 helpMenuItem=can4eve Help
@@ -35,3 +39,6 @@ problem_occured=A problem occured
 support_email=support@bitplan.com
 monitoring=reading ...
 halted=stopped
+sorry=sorry
+weAreSorry=We are sorry ...
+notImplementedYet= is not implemented yet
