prepares File/Open  and fixes I18n menu item names

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -4,27 +4,27 @@ appName=can4eve
 Menu=Menü
 #Main Menu
 fileMenu=Datei
-openMenuItem=Öffnen
-saveMenuItem=Speichern
-quitMenuItem=Beenden
+fileOpenMenuItem=Öffnen
+fileSaveMenuItem=Speichern
+fileQuitMenuItem=Beenden
 obdMenu=OBD
-startMenuItem=Start
-haltMenuItem=Halt
-testMenuItem=Test
+obdStartMenuItem=Start
+obdHaltMenuItem=Halt
+obdTestMenuItem=Test
 settingsMenu=Einstellungen
-settingsMenuItem=OBDII
-preferencesMenuItem=Vorgaben
+settingsSettingsMenuItem=OBDII
+settingsPreferencesMenuItem=Vorgaben
 vehicleMenu=Fahrzeug
 vehicleMenuItem=Details
 viewMenu=Ansicht
-historyViewMenuItem=Verlauf
-settingsViewMenuItem=Einstellungen
-monitorViewMenuItem=OBD
+viewHistoryViewMenuItem=Verlauf
+viewSettingsViewMenuItem=Einstellungen
+viewMonitorViewMenuItem=OBD
 helpMenu=Hilfe
-aboutMenuItem=Über
-helpMenuItem=can4eve Hilfe
-feedbackMenuItem=Feedback senden ...
-bugReportMenuItem=Bug melden ...
+helpAboutMenuItem=Über
+helpHelpMenuItem=can4eve Hilfe
+helpFeedbackMenuItem=Feedback senden ...
+helpBugReportMenuItem=Bug melden ...
 language_changed_title=Neue Sprache
 language_changed=Du hast Deutsch als Deine neue Sprache gewählt
 newlanguage_restart=Für den vollen Effekt des Wechsels ist ein Neustart der Anwendung erforderlich.
