--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -4,27 +4,27 @@ appName=can4eve
 Menu=Menu
 #Main Menu
 fileMenu=File
-openMenuItem=Open
-saveMenuItem=Save
-quitMenuItem=Quit
+fileOpenMenuItem=Open
+fileSaveMenuItem=Save
+fileQuitMenuItem=Quit
 obdMenu=OBD
-startMenuItem=Start
-haltMenuItem=Halt
-testMenuItem=Test
+obdStartMenuItem=Start
+obdHaltMenuItem=Halt
+obdTestMenuItem=Test
 settingsMenu=Settings
-settingsMenuItem=OBDII
-preferencesMenuItem=Preferences
+settingsSettingsMenuItem=OBDII
+settingsPreferencesMenuItem=Preferences
 vehicleMenu=Car
 vehicleMenuItem=Details
 viewMenu=View
-historyViewMenuItem=History
-settingsViewMenuItem=Settings
-monitorViewMenuItem=OBD
+viewHistoryViewMenuItem=History
+viewSettingsViewMenuItem=Settings
+viewMonitorViewMenuItem=OBD
 helpMenu=Help 
-aboutMenuItem=About
-helpMenuItem=can4eve Help
-feedbackMenuItem=send Feedback ...
-bugReportMenuItem=create Bugreport ...
+helpAboutMenuItem=About
+helpHelpMenuItem=can4eve Help
+helpFeedbackMenuItem=send Feedback ...
+helpBugReportMenuItem=create Bugreport ...
 # Language Change
 language_changed_title=New language
 language_changed=You have selected english as your new language
