improves ClockPane and fixes JavaFX sampleApp toolkit init and close

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -41,3 +41,9 @@ halted=halt
 sorry=Entschuldigung
 weAreSorry=Es tut uns leid ...
 notImplementedYet= ist noch nicht realisiert
+#Watches
+watchParking=Parken
+watchMoving=Fahren
+watchCharging=Laden
+watchTotal=Gesamt
+watchTime=Uhrzeit
