--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -42,3 +42,9 @@ halted=stopped
 sorry=sorry
 weAreSorry=We are sorry ...
 notImplementedYet= is not implemented yet
+# Watches
+watchParking=Parking
+watchMoving=Moving
+watchCharging=Charging
+watchTotal=Total
+watchTime=Time of Day
