adds mmPerRound to vehicle settings, works around binding update issue

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -9,6 +9,7 @@ fileSaveMenuItem=Speichern
 fileQuitMenuItem=Beenden
 obdMenu=OBD
 obdStartMenuItem=Start
+obdStartWithLogMenuItem=Start with Log
 obdHaltMenuItem=Halt
 obdTestMenuItem=Test
 settingsMenu=Einstellungen
@@ -47,3 +48,4 @@ watchMoving=Fahren
 watchCharging=Laden
 watchTotal=Gesamt
 watchTime=Uhrzeit
+#SOC=SOC
