--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -9,6 +9,7 @@ fileSaveMenuItem=Save
 fileQuitMenuItem=Quit
 obdMenu=OBD
 obdStartMenuItem=Start
+obdStartWithLogMenuItem=Start mit Log
 obdHaltMenuItem=Halt
 obdTestMenuItem=Test
 settingsMenu=Settings
@@ -48,3 +49,4 @@ watchMoving=Moving
 watchCharging=Charging
 watchTotal=Total
 watchTime=Time of Day
+#SOC=SOC
