adds min max properties

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -50,6 +50,9 @@ watchTotal=Gesamt
 watchTime=Uhrzeit
 rpm=UPM
 rpmSpeed=UPM Tempo
-rpmMax=UPM Max
-rpmAvg=UPM Ø
+rpmMax=Max
+rpmAvg=Ø
+rpmSpeedMax=Max
+rpmSpeedAvg=Ø
+revCount=Drehzahl
 #SOC=SOC
