--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -52,5 +52,8 @@ watchTime=Time of Day
 #SOC=SOC
 rpm=RPM
 rpmSpeed=RPM Speed
-rpmMax=RPM Max
-rpmAvg=RPM Avg
+rpmMax=Max
+rpmAvg=Avg
+rpmSpeedMax=Max
+rpmSpeedAvg=Avg
+revCounter=Rev Count
