improves layout adds dashBoard Menu

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -18,6 +18,7 @@ settingsPreferencesMenuItem=Vorgaben
 vehicleMenu=Fahrzeug
 vehicleMenuItem=Details
 viewMenu=Ansicht
+viewDashboardViewMenuItem=Instrumente
 viewHistoryViewMenuItem=Verlauf
 viewSettingsViewMenuItem=Einstellungen
 viewMonitorViewMenuItem=OBD
@@ -55,4 +56,7 @@ rpmAvg=Ø
 rpmSpeedMax=Max
 rpmSpeedAvg=Ø
 revCount=Drehzahl
-#SOC=SOC
+soc=Ladung
+dashBoard=Drehzahl
+clocks=Uhren
+fullScreen=Vollbild
