--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -18,6 +18,7 @@ settingsPreferencesMenuItem=Preferences
 vehicleMenu=Car
 vehicleMenuItem=Details
 viewMenu=View
+viewDashboardViewMenuItem=Dashboard
 viewHistoryViewMenuItem=History
 viewSettingsViewMenuItem=Settings
 viewMonitorViewMenuItem=OBD
@@ -57,3 +58,7 @@ rpmAvg=Avg
 rpmSpeedMax=Max
 rpmSpeedAvg=Avg
 revCount=Rev Count
+soc=SOC
+dashBoard=RPM
+clocks=Clocks
+fullScreen=full Screen
