--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -59,4 +59,7 @@ revCount=Drehzahl
 soc=Ladung
 dashBoard=Drehzahl
 clocks=Uhren
-fullScreen=Vollbild
+fullScreen=Vollbild\u2191
+partScreen=Vollbild\u2193
+hideMenu=Menü\u2193
+showMenu=Menü\u2191
