--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -61,4 +61,7 @@ revCount=Rev Count
 soc=SOC
 dashBoard=RPM
 clocks=Clocks
-fullScreen=full Screen
+fullScreen=full Screen\u2191
+partScreen=full Screen\u2193
+hideMenu=Menu\u2193
+showMenu=Menu\u2191
