adds charging infos to charge panel

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -63,3 +63,12 @@ fullScreen=Vollbild\u2191
 partScreen=Vollbild\u2193
 hideMenu=Menü\u2193
 showMenu=Menü\u2191
+rr=RR
+km=km
+amps=A
+volts=V
+acVolts=~ Spannung
+dcVolts== Spannung
+acAmps=~ Strom
+dcAmps== Strom
+kmh=km/h
