--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -65,3 +65,12 @@ fullScreen=full Screen\u2191
 partScreen=full Screen\u2193
 hideMenu=Menu\u2193
 showMenu=Menu\u2191
+rr=RR
+km=km
+amps=A
+volts=V
+acVolts=AC Volts
+dcVolts=DC Volts
+acAmps=AC Amps
+dcAmps=DC Amps
+kmh=km/h
