refactors and adds serial device selection

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -77,3 +77,7 @@ percent=%
 odoMeter=Gesamt km
 tripOdoMeter=Tages km
 odoInfo=KM Zähler
+serialPortSelect=USB/Seriell Anschluß
+serialPortNoneFound=kein passendes Gerät gefunden
+serialPortPleaseConnect=bitte schließ ein OBDII Gerät an USB an
+serialPortPleaseSelect=Wähle den USB Anschluss für das OBDII Gerät
