--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -79,3 +79,7 @@ percent=%
 odoMeter=Total km
 tripOdoMeter=Trip km
 odoInfo=Odometer
+serialPortSelect=USB/Serial port
+serialPortNoneFound=no useable USB/Serial port found
+serialPortPleaseConnect=please connect an OBDII device to USB
+serialPortPleaseSelect=select the USB connection for the OBDII device
