refactors to improve simulation replay

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -64,6 +64,10 @@ partScreen=Vollbild\u2193
 hideMenu=Menü\u2193
 showMenu=Menü\u2191
 screenShot=ScreenShot
+# Simulation
+from=von
+to=bis
+# Params
 rr=RR
 km=km
 amps=A
