--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -66,6 +66,10 @@ partScreen=full Screen\u2193
 hideMenu=Menu\u2193
 showMenu=Menu\u2191
 screenShot=ScreenShot
+# Simulation
+from=from
+to=to
+# params
 rr=RR
 km=km
 amps=A
