adds close menuItem and feedback for screenShots

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -5,6 +5,7 @@ Menu=Menü
 #Main Menu
 fileMenu=Datei
 fileOpenMenuItem=Öffnen
+fileCloseMenuItem=Schließen
 fileSaveMenuItem=Speichern
 fileQuitMenuItem=Beenden
 obdMenu=OBD
