--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -5,6 +5,7 @@ Menu=Menu
 #Main Menu
 fileMenu=File
 fileOpenMenuItem=Open
+fileCloseMenuItem=Close
 fileSaveMenuItem=Save
 fileQuitMenuItem=Quit
 obdMenu=OBD
