improves error handling with Exception Helps

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -1,5 +1,7 @@
 #App
 appName=can4eve
+#fixed parts of software
+help=Hilfe
 #Parts
 Menu=Menü
 #Main Menu
@@ -86,3 +88,5 @@ serialPortSelect=USB/Seriell Anschluß
 serialPortNoneFound=kein passendes Gerät gefunden
 serialPortPleaseConnect=bitte schließ ein OBDII Gerät an USB an
 serialPortPleaseSelect=Wähle den USB Anschluss für das OBDII Gerät
+# ExceptionHelp
+addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x gestartet?
