--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -1,5 +1,7 @@
 #App
 appName=can4eve
+#fixed parts of software
+help=Help
 #Parts
 Menu=Menu
 #Main Menu
@@ -88,3 +90,5 @@ serialPortSelect=USB/Serial port
 serialPortNoneFound=no useable USB/Serial port found
 serialPortPleaseConnect=please connect an OBDII device to USB
 serialPortPleaseSelect=select the USB connection for the OBDII device
+# ExceptionHelps
+addressAlreadyInUse=Could not start Simulator - did you start the software twice?
