adds power values to chargepanel

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -79,6 +79,9 @@ acVolts=~ Spannung
 dcVolts== Spannung
 acAmps=~ Strom
 dcAmps== Strom
+dcPower== Leistung
+acPower=~ Leistung
+kWatt=kW
 kmh=km/h
 percent=%
 odoMeter=Gesamt km
