--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -81,6 +81,9 @@ acVolts=AC Volts
 dcVolts=DC Volts
 acAmps=AC Amps
 dcAmps=DC Amps
+dcPower=DC Power
+acPower=AC Power
+kWatt=kW
 kmh=km/h
 percent=%
 odoMeter=Total km
