--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -91,5 +91,7 @@ serialPortSelect=USB/Seriell Anschluß
 serialPortNoneFound=kein passendes Gerät gefunden
 serialPortPleaseConnect=bitte schließ ein OBDII Gerät an USB an
 serialPortPleaseSelect=Wähle den USB Anschluss für das OBDII Gerät
+# Welcome Dialog
+welcome=Willkommen
 # ExceptionHelp
 addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x gestartet?
