--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -93,5 +93,7 @@ serialPortSelect=USB/Serial port
 serialPortNoneFound=no useable USB/Serial port found
 serialPortPleaseConnect=please connect an OBDII device to USB
 serialPortPleaseSelect=select the USB connection for the OBDII device
+# Welcome Dialog
+welcome=Welcome
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
