prepares Welcome-Wizard

--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -18,6 +18,7 @@ obdTestMenuItem=Test
 settingsMenu=Settings
 settingsSettingsMenuItem=OBDII
 settingsPreferencesMenuItem=Preferences
+settingsWelcomeMenuItem=Wizard
 vehicleMenu=Car
 vehicleMenuItem=Details
 viewMenu=View
@@ -95,5 +96,8 @@ serialPortPleaseConnect=please connect an OBDII device to USB
 serialPortPleaseSelect=select the USB connection for the OBDII device
 # Welcome Dialog
 welcome=Welcome
+welcomeVehicle=Welcome to the Can4Eve software!\nPlease select a vehicle
+welcomeObd=Please select an OBDII Connection
+welcomeCon=Please set the connection parameters
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
