--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -18,6 +18,7 @@ obdTestMenuItem=Test
 settingsMenu=Einstellungen
 settingsSettingsMenuItem=OBDII
 settingsPreferencesMenuItem=Vorgaben
+settingsWelcomeMenuItem=Wizard
 vehicleMenu=Fahrzeug
 vehicleMenuItem=Details
 viewMenu=Ansicht
@@ -93,5 +94,8 @@ serialPortPleaseConnect=bitte schließ ein OBDII Gerät an USB an
 serialPortPleaseSelect=Wähle den USB Anschluss für das OBDII Gerät
 # Welcome Dialog
 welcome=Willkommen
+welcomeVehicle=Willkommen zur Can4Eve software!\nBitte wähle ein Fahrzeug
+welcomeObd=Bitte wähle eine OBDII Verbindung
+welcomeCon=Bitte setze die Verbindungsparameter
 # ExceptionHelp
 addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x gestartet?
