--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -95,9 +95,13 @@ serialPortNoneFound=no useable USB/Serial port found
 serialPortPleaseConnect=please connect an OBDII device to USB
 serialPortPleaseSelect=select the USB connection for the OBDII device
 # Welcome Dialog
-welcome=Welcome
-welcomeVehicle=Welcome to the Can4Eve software!\nPlease select a vehicle
-welcomeObd=Please select an OBDII Connection
-welcomeCon=Please set the connection parameters
+welcome=Welcome to the Can4Eve software!
+welcomeLanguage=Step 1 of 5\n\nWelcome to the Can4Eve software!\nPlease select a language
+welcomeVehicle=Step 2 of 5\n\nPlease select a vehicle\n
+welcomeObd=Step 3 of 5\n\nPlease select an OBDII Connection\n
+welcomeCon=Step 4 of 5\n\nPlease set the connection parameters\n
+welcomeTestResult=Step 5 of 5\n\n
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
+device=Anschluﬂ
+baudRate=Baudrate
