--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -96,12 +96,14 @@ serialPortPleaseConnect=please connect an OBDII device to USB
 serialPortPleaseSelect=select the USB connection for the OBDII device
 # Welcome Dialog
 welcome=Welcome to the Can4Eve software!
-welcomeLanguage=Step 1 of 5\n\nWelcome to the Can4Eve software!\nPlease select a language
-welcomeVehicle=Step 2 of 5\n\nPlease select a vehicle\n
-welcomeObd=Step 3 of 5\n\nPlease select an OBDII Connection\n
-welcomeCon=Step 4 of 5\n\nPlease set the connection parameters\n
-welcomeTestResult=Step 5 of 5\n\n
+welcomeStep=Step {0} of {1}
+welcomeLanguage=Welcome to the Can4Eve software!\nPlease select a language
+welcomeVehicle=Please select a vehicle\n
+welcomeObd=Please select an OBDII Connection\n
+welcomeCon=Please set the connection parameters\n
+welcomeTestResult=Connection test
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
 device=Anschluﬂ
 baudRate=Baudrate
+reportIssue=Fehler melden ...
