--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -94,13 +94,15 @@ serialPortPleaseConnect=bitte schließ ein OBDII Gerät an USB an
 serialPortPleaseSelect=Wähle den USB Anschluss für das OBDII Gerät
 # Welcome Dialog
 welcome=Willkommen zur Can4Eve software
-welcomeLanguage=Schritt 1 von 5\n\nWillkommen zur Can4Eve software\nBitte wähle eine Sprache
-welcomeVehicle=Schritt 2 von 5\n\nBitte wähle Deinen Fahrzeugtyp
-welcomeObd=Schritt 3 von 5\n\nBitte wähle eine OBDII Verbindung
-welcomeCon=Schritt 4 von 5\n\nBitte setze die Verbindungsparameter
-welcomeTestResult=Schritt 5 von 5\n\n
+welcomeStep=Schritt {0} von {1}
+welcomeLanguage=Willkommen zur Can4Eve software\nBitte wähle eine Sprache
+welcomeVehicle=Bitte wähle Deinen Fahrzeugtyp
+welcomeObd=Bitte wähle eine OBDII Verbindung
+welcomeCon=Bitte setze die Verbindungsparameter
+welcomeTestResult=Verbindungstest
 # ExceptionHelp
 addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x gestartet?
 # fxml
 device=device
 baudRate=baudrate
+reportIssue=Report Issue ...
