improves WelcomeWizard and adds help links

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -40,7 +40,8 @@ error=Fehler
 invalid_configuration=ungültige oder unbekannte Verbindungseinstellung
 connection_ok=Verbindung OK\u2713
 connection_failed=Verbindung fehlgeschlagen
-problem_occured=Ein Problem is aufgetreten
+connectionUnusable=Die gewählte Verbindung funktioniert nicht\nBitte wähle eine andere
+problem_occured=Ein Problem ist aufgetreten
 support_email=support@bitplan.com
 monitoring=lese ...
 halted=halt
@@ -96,13 +97,19 @@ serialPortPleaseSelect=Wähle den USB Anschluss für das OBDII Gerät
 welcome=Willkommen zur Can4Eve software
 welcomeStep=Schritt {0} von {1}
 welcomeLanguage=Willkommen zur Can4Eve software\nBitte wähle eine Sprache
-welcomeVehicle=Bitte wähle Deinen Fahrzeugtyp
+welcomeVehicleType=Bitte wähle Deinen Fahrzeugtyp
+welcomeVehicle=Bitte lege Deine Fahrzeugdaten fest
 welcomeObd=Bitte wähle eine OBDII Verbindung
 welcomeCon=Bitte setze die Verbindungsparameter
 welcomeTestResult=Verbindungstest
 # ExceptionHelp
 addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x gestartet?
+networkIsUnreachable=Das Netzwerkgerät ist an an der angegebenen \nAddresse und Port-Nummer nicht erreichbar.\nBitte prüfe das Gerät und die Einstellungen. 
+obdException=Es gab ein Problem mit der OBD Verbindung. \nDie häufigste Ursache ist ein timeout der z.B. erfolgt\nwenn die Baudrate nicht stimmt oder das Gerät nicht aktiv ist\n weil es sich z.B. schlafen gelegt hat. 
 # fxml
-device=device
-baudRate=baudrate
-reportIssue=Report Issue ...
+serialDevice=Anschluß
+serialDeviceTooltip=Der Name des Anschlußes hängt vom Betriebssystem des Computers ab
+baudRate=Baudrate
+baudRateTooltip=Anschlußgeschwindigkeit oder automatic wenn typische Baudraten probiert werden sollen
+directSerialTooltip=Wähle diese Option wenn der Zugriff auf den Anschluß direkt ohne seriellen Treiber erfolgen soll
+reportIssue=Fehler melden ...
