--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -41,6 +41,7 @@ success=Success
 error=Error
 connection_ok=Connection OK\u2713
 connection_failed=Connection failed
+connectionUnusable=The choosen connection does not work\nPlease try another one
 problem_occured=A problem occured
 support_email=support@bitplan.com
 monitoring=reading ...
@@ -98,12 +99,19 @@ serialPortPleaseSelect=select the USB connection for the OBDII device
 welcome=Welcome to the Can4Eve software!
 welcomeStep=Step {0} of {1}
 welcomeLanguage=Welcome to the Can4Eve software!\nPlease select a language
-welcomeVehicle=Please select a vehicle\n
-welcomeObd=Please select an OBDII Connection\n
-welcomeCon=Please set the connection parameters\n
+welcomeVehicle=Please set your vehicle details
+welcomeVehicleType=Please select a vehicle type
+welcomeObd=Please select an OBDII Connection
+welcomeCon=Please set the connection parameters
 welcomeTestResult=Connection test
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
-device=Anschluﬂ
-baudRate=Baudrate
-reportIssue=Fehler melden ...
+networkIsUnreachable=The network address and port you specified is not reachable.\nYou might want to check the network device and the settings. 
+obdException=Their has been a problem with the OBD connection. \nThe most common error is a timeout which might e.g. happen\n if you set the wrong baud rate or the device is not listening\n e.g. because it went to sleep. 
+# FXML
+serialDevice=device
+serialDeviceTooltip=the name of the device depends on your computer's operating system
+baudRate=baudrate
+baudRateTooltip=the speed of the connection or automatic if typical baudrates shall be tried
+directSerialTooltip=check if the access to the device should be done directly with out a serial driver
+reportIssue=Report issue ...
