adds simulator option to command line and improvew WelcomeWizard

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -102,10 +102,12 @@ welcomeVehicle=Bitte lege Deine Fahrzeugdaten fest
 welcomeObd=Bitte wähle eine OBDII Verbindung
 welcomeCon=Bitte setze die Verbindungsparameter
 welcomeTestResult=Verbindungstest
+welcomeTestVehicle=Bitte verbinde nun das OBDII-Adapter mit dem Fahrzeug \nund schaltet das Fahrzeug ein.
 # ExceptionHelp
 addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x gestartet?
 networkIsUnreachable=Das Netzwerkgerät ist an an der angegebenen \nAddresse und Port-Nummer nicht erreichbar.\nBitte prüfe das Gerät und die Einstellungen. 
 obdException=Es gab ein Problem mit der OBD Verbindung. \nDie häufigste Ursache ist ein timeout der z.B. erfolgt\nwenn die Baudrate nicht stimmt oder das Gerät nicht aktiv ist\n weil es sich z.B. schlafen gelegt hat. 
+connectionRefused=Das Netzwerk ist an an der angegebenen \nAddresse aber nicht auf dieser Port-Nummer erreichbar.\nBitte prüfe das Gerät und die Einstellungen. 
 # fxml
 serialDevice=Anschluß
 serialDeviceTooltip=Der Name des Anschlußes hängt vom Betriebssystem des Computers ab
@@ -113,3 +115,5 @@ baudRate=Baudrate
 baudRateTooltip=Anschlußgeschwindigkeit oder automatic wenn typische Baudraten probiert werden sollen
 directSerialTooltip=Wähle diese Option wenn der Zugriff auf den Anschluß direkt ohne seriellen Treiber erfolgen soll
 reportIssue=Fehler melden ...
+hostnameTooltip=hostname oder ip-Addresse des Geräts
+portTooltip=port Nummer des Gerätes
