--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -104,14 +104,18 @@ welcomeVehicleType=Please select a vehicle type
 welcomeObd=Please select an OBDII Connection
 welcomeCon=Please set the connection parameters
 welcomeTestResult=Connection test
+welcomeTestVehicle=Please connect your OBDII-Adapter to the vehicle now\n and switch on the vehicle.
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
 networkIsUnreachable=The network address and port you specified is not reachable.\nYou might want to check the network device and the settings. 
 obdException=Their has been a problem with the OBD connection. \nThe most common error is a timeout which might e.g. happen\n if you set the wrong baud rate or the device is not listening\n e.g. because it went to sleep. 
+connectionRefused=The network is reachable at the address but not the port you specified.\nYou might want to check the network device and the settings. 
 # FXML
 serialDevice=device
 serialDeviceTooltip=the name of the device depends on your computer's operating system
 baudRate=baudrate
-baudRateTooltip=the speed of the connection or automatic if typical baudrates shall be tried
+baudRateTooltip=the speed of the connection or automatic if typical baud rates shall be tried
 directSerialTooltip=check if the access to the device should be done directly with out a serial driver
 reportIssue=Report issue ...
+hostnameTooltip=hostname or ip-address of the device
+portTooltip=port number of the device
