--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -117,3 +117,5 @@ directSerialTooltip=Wähle diese Option wenn der Zugriff auf den Anschluß direkt 
 reportIssue=Fehler melden ...
 hostnameTooltip=hostname oder ip-Addresse des Geräts
 portTooltip=port Nummer des Gerätes
+maxSpeed=Höchstgeschwindigkeit (km/h)
+vehicleModel=Fahrzeugtyp
