--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -119,3 +119,5 @@ directSerialTooltip=check if the access to the device should be done directly wi
 reportIssue=Report issue ...
 hostnameTooltip=hostname or ip-address of the device
 portTooltip=port number of the device
+maxSpeed=maximum Speed (km/h)
+vehicleModel=model
