refactors vehicle specific CANValue handling and improves Vehicle Data step of WelcomeWizard

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -98,10 +98,10 @@ welcome=Willkommen zur Can4Eve software
 welcomeStep=Schritt {0} von {1}
 welcomeLanguage=Willkommen zur Can4Eve software\nBitte wähle eine Sprache
 welcomeVehicleType=Bitte wähle Deinen Fahrzeugtyp
-welcomeVehicle=Bitte lege Deine Fahrzeugdaten fest
+welcomeVehicle=Lese Fahrzeugdaten ...
 welcomeObd=Bitte wähle eine OBDII Verbindung
 welcomeCon=Bitte setze die Verbindungsparameter
-welcomeTestResult=Verbindungstest
+welcomeTestResult=Verbindungstest ...
 welcomeTestVehicle=Bitte verbinde nun das OBDII-Adapter mit dem Fahrzeug \nund schaltet das Fahrzeug ein.
 # ExceptionHelp
 addressAlreadyInUse=Simulatorstart fehlgeschlagen - hast Du die Software 2 x gestartet?
@@ -119,3 +119,6 @@ hostnameTooltip=hostname oder ip-Addresse des Geräts
 portTooltip=port Nummer des Gerätes
 maxSpeed=Höchstgeschwindigkeit (km/h)
 vehicleModel=Fahrzeugtyp
+vehicleYear=Baujahr
+vehicleManufacturer=Hersteller
+vehicleVinProblem=Fahrzeugdaten (VIN) konnten nicht gelesen werden.
