--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -99,11 +99,11 @@ serialPortPleaseSelect=select the USB connection for the OBDII device
 welcome=Welcome to the Can4Eve software!
 welcomeStep=Step {0} of {1}
 welcomeLanguage=Welcome to the Can4Eve software!\nPlease select a language
-welcomeVehicle=Please set your vehicle details
+welcomeVehicle=Reading vehicle data ...
 welcomeVehicleType=Please select a vehicle type
 welcomeObd=Please select an OBDII Connection
 welcomeCon=Please set the connection parameters
-welcomeTestResult=Connection test
+welcomeTestResult=Testing Connection ...
 welcomeTestVehicle=Please connect your OBDII-Adapter to the vehicle now\n and switch on the vehicle.
 # ExceptionHelps
 addressAlreadyInUse=Could not start Simulator - did you start the software twice?
@@ -121,3 +121,6 @@ hostnameTooltip=hostname or ip-address of the device
 portTooltip=port number of the device
 maxSpeed=maximum Speed (km/h)
 vehicleModel=model
+vehicleYear=year
+vehicleManufacturer=manufacturer
+vehicleVinProblem=Vehicle data (VIN) could not be read.
