refactors to add CellCount

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -87,6 +87,7 @@ kWatt=kW
 kmh=km/h
 percent=%
 odoMeter=Gesamt km
+CellCount=# Zellen
 tripOdoMeter=Tages km
 odoInfo=KM Z‰hler
 serialPortSelect=USB/Seriell Anschluﬂ
