--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -89,6 +89,7 @@ kWatt=kW
 kmh=km/h
 percent=%
 odoMeter=Total km
+CellCount=# of Cells
 tripOdoMeter=Trip km
 odoInfo=Odometer
 serialPortSelect=USB/Serial port
