fixes to e.g. add VIN/year to vehicle info

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -86,6 +86,8 @@ acPower=~ Leistung
 kWatt=kW
 kmh=km/h
 percent=%
+batteryCapacity=Kapazität
+amperHours=Ah
 odoMeter=Gesamt km
 CellCount=# Zellen
 tripOdoMeter=Tages km
