--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -88,6 +88,8 @@ acPower=AC Power
 kWatt=kW
 kmh=km/h
 percent=%
+batteryCapacity=Capacity
+amperHours=Ah
 odoMeter=Total km
 CellCount=# of Cells
 tripOdoMeter=Trip km
