adds autostart and fixes some issues

--- a/can4eve/src/main/resources/i18n/can4eve_de.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_de.properties
@@ -35,6 +35,9 @@ language_changed_title=Neue Sprache
 language_changed=Du hast Deutsch als Deine neue Sprache gewählt
 newlanguage_restart=Für den vollen Effekt des Wechsels ist ein Neustart der Anwendung erforderlich.
 # Messages
+elm327Can4eveCompatible=can4eve kompatibles ELM327 Gerät erkannt
+elm327Can4eveIncompatible=ELM327 Gerät erkannt das inkompatibel sein könnte
+elm327Recommended=Das Gerät hat den schnellen STN chip
 success=Erfolg
 error=Fehler
 invalid_configuration=ungültige oder unbekannte Verbindungseinstellung
