--- a/can4eve/src/main/resources/i18n/can4eve_en.properties
+++ b/can4eve/src/main/resources/i18n/can4eve_en.properties
@@ -36,6 +36,9 @@ language_changed_title=New language
 language_changed=You have selected english as your new language
 newlanguage_restart=To get the full effect of the change a restart of the application is necessary!
 # Messages
+elm327Can4eveCompatible=can4eve compatible ELM327 device detected
+elm327Can4eveIncompatible=ELM327 device detected which might not be compatible
+elm327Recommended=this device has the quick STN chip
 invalid_configuration=invalid or unknown connection configuration
 success=Success
 error=Error
